--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint \"./src/**/*.ts\" \"./src/**/*.tsx\"",
+    "lint:fix": "eslint --fix \"./src/**/*.ts\" \"./src/**/*.tsx\""
   },
   "eslintConfig": {
     "extends": [
@@ -41,9 +43,21 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.14",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "postcss": "^8.4.27",
+    "prettier": "^3.0.1",
     "sass": "^1.65.1",
     "tailwind": "^4.0.0"
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/8njm1n/aha.git",
+  "author": "Benjamin Hsu <benjamin.hsu.official@gmail.com>",
+  "license": "MIT"
 }
